--- a/style.css
+++ b/style.css
@@ -39,3 +39,16 @@ body {
 form{
     margin-top: 100px;
 }
+
+h2{
+    text-align: center;
+    font-size: 200%;
+    color :rgb(249, 249, 249);background: blue;
+}
+
+p{
+    text-align: center;
+    font-size: 200%;
+    color:rgb(255, 255, 255);
+background-color: rgb(27, 0, 149);
+}
